--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "parcel": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-test-renderer": "^18.2.0",
     "sequelize": "^6.29.3",
     "sqlite3": "^5.1.6"
