feat: set up client dev to remove parcel cache before hosting

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "scripts": {
     "test": "jest",
-    "client-dev": "parcel public/index.html --open",
+    "client-dev": "rm -r .parcel-cache/ && parcel public/index.html --open",
     "server-dev": "nodemon server.js",
     "seed": "node server/seed.js",
     "start": "parcel build public/index.html && npm run seed && node server.js"
