--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
+    "regenerator-runtime": "^0.13.11",
     "sequelize": "^6.29.3",
     "sqlite3": "^5.1.6"
   },
