--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "16.0.0",
     "express": "^4.18.2",
     "express-router": "^0.0.1",
+    "lightningcss": "^1.19.0",
     "morgan": "1.10.0",
     "nodemon": "^2.0.19",
     "parcel": "^2.8.3",
